# cmake-cpp-project-demo

./: CMakeLists.txt  README.md
src/: main.cpp
